extends Node

@onready var sfx_dash = $Dash
@onready var sfx_decelerate = $Decelerate
@onready var sfx_car_crash = $CarCrash
@onready var sfx_car_dash = $CarDash
@onready var sfx_car_decelerate = $CarDecelerate
@onready var sfx_car_engine = $CarEngine
@onready var sfx_car_engine_start = $CarEngineStart
@onready var sfx_character_speech = $CharacterSpeech
@onready var sfx_combust = $Combust
@onready var sfx_deer_run = $DeerRun
@onready var sfx_flaming_car = $FlamingCar
@onready var sfx_flame_thrower = $FlameThrower
@onready var sfx_spotlight_break = $SpotlightBreak
@onready var sfx_spotlight_flick = $SpotlightFlick
@onready var sfx_transition = $Transition
